--- a/package.json
+++ b/package.json
@@ -19,10 +19,10 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "1.0.0",
-    "html2canvas-pro": "^1.5.8",
     "lucide-react": "^0.468.0",
     "next": "15.1.1",
     "react": "^19.0.0",
+    "react-cropper": "^2.3.3",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.1",
     "slugify": "^1.6.6",
